logs/djangobp.log
Listing '.'...
Listing './bin'...
Compiling './bin/djangobp-install.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djangobp'...
Compiling './lib/python3.5/site-packages/djangobp/dateutil.py'...
***   File "./lib/python3.5/site-packages/djangobp/dateutil.py", line 11
    raise TypeError, 'Object of type %s with value of %s is not JSON serializable' % (type(obj), repr(obj))
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangobp/editsettings.py'...
***   File "./lib/python3.5/site-packages/djangobp/editsettings.py", line 10
    print 'cannot import %s' % app_name
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/djangobp/httputil.py'...
***   File "./lib/python3.5/site-packages/djangobp/httputil.py", line 67
    print 'exception:', exception.message
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/djangobp/makohelper.py'...
***   File "./lib/python3.5/site-packages/djangobp/makohelper.py", line 23
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangobp/management'...
Listing './lib/python3.5/site-packages/djangobp/management/commands'...
Compiling './lib/python3.5/site-packages/djangobp/management/commands/mysqlconnect.py'...
***   File "./lib/python3.5/site-packages/djangobp/management/commands/mysqlconnect.py", line 20
    print 'CREATE SCHEMA `%s` DEFAULT CHARACTER SET utf8 COLLATE utf8_general_ci' % database
                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djangobp/scaffold'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/app'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/app/controllers'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/app/static'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/app/static/css'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/app/static/fancybox'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/app/static/images'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/app/static/js'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/app/templates'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/model'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/model/controllers'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/model/templates'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/model/templates/common'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/model/templates/sample'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/scaffold'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/socialauth'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/socialauth/controllers'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/socialauth/templates'...
Listing './lib/python3.5/site-packages/djangobp/scaffold/socialauth/templates/accounts'...
Compiling './lib/python3.5/site-packages/djangobp/seleniumhelper.py'...
***   File "./lib/python3.5/site-packages/djangobp/seleniumhelper.py", line 26
    print func
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djangobp-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
